paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_2b/sample_001/target.compile.log
error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_2b/sample_001/target.rs:68:14
   |
68 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.